# rag-mem

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-29-rag-mem-system-v0.1.md  2026-05-29-rag-mem-v0.2-lancedb.md
ragmem/: __init__.py  __main__.py  chunker.py  cli.py  embeddings.py  knowledge_base.py  llm.py  loader.py  persistence.py  types.py
ragmem/index/: __init__.py  bm25.py  graphrag.py  lance.py  semantic.py
tests/: test_bm25.py  test_chunker.py  test_cli.py  test_embeddings.py  test_graphrag.py  test_knowledge_base.py  test_lance.py  test_loader.py  test_persistence.py  test_semantic.py
tests/fixtures/mini_kb/: company.md  products.md  teams.md
